syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1.common;

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/common;common";
option java_outer_classname = "LtV1CommonTimestampRange";

message TimestampRange {
  int64 begin_ts = 1;
  int64 end_ts = 2;
}
